--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
-  "name": "react-homework-template",
+  "name": "elifTech-test",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://goitacademy.github.io/react-homework-template/",
+  "homepage": "https://goitacademy.github.io/elifTech-test/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "gsap": "^3.11.5",
+    "mobx": "^6.9.0",
+    "mobx-persist-store": "^1.1.3",
+    "mobx-react-lite": "^3.4.3",
+    "nanoid": "^4.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.0.0-rc.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
@@ -36,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1"
   }
 }
